reverse-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: reverse-proxy
  name: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: reverse-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-docker-compose-back-tier: "true"
        io.kompose.network/kompose-docker-compose-front-tier: "true"
        io.kompose.service: reverse-proxy
    spec:
      containers:
        - image: nginx:latest
          name: reverse-proxy
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: reverse-proxy-claim0
      restartPolicy: Always
      volumes:
        - name: reverse-proxy-claim0
          persistentVolumeClaim:
            claimName: reverse-proxy-claim0
status: {}
