webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: xcoulon/go-url-shortener:0.1.0
        name: go-url-shortener
        ports:
        - containerPort: 8080
