db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
      #    - name: "3306-tcp"
      #      port: 3306
      #      targetPort: 3306

  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
