nginx-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter
  labels:
    io.kompose.service: nginx-exporter
spec:
  selector:
    io.kompose.service: reverse-proxy
  ports:
    - name: nginx-exporter
      port: 9113
      targetPort: 9113
  type: ClusterIP
