webapp-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: NodePort
  ports:
    - nodePort: 31313
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: webapp
