kompose-docker-compose-back-tier-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: kompose-docker-compose-back-tier
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kompose-docker-compose-back-tier: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kompose-docker-compose-back-tier: "true"
